Redis-避免缓存穿透的利器之BloomFilter

--- a/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
+++ b/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
@@ -43,5 +43,5 @@
 数据库绝对不会死，限流组件确保了每秒只有多少个请求能通过。只要数据库不是，就是说，对用户来说，， 3/5 的请求都是可以被处理的。 只要有 3 / 5 的请求可以被处理，就意味着你的系统没死，对用户来说，可能就是点击几次刷不出来页面，但是多点几次，就可以刷出来一次。
 
 
-## 布隆过滤器（Bloom Filter） ##
+## Redis-避免缓存穿透的利器之BloomFilter ##
 
