--- a/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
+++ b/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
@@ -48,4 +48,8 @@
 
 ### Bloom Filter 概念 ###
 
-布隆过滤器（Bloom Filter）
+布隆过滤器（Bloom Filter） 是 1970 年一个叫布隆的小伙子提出来的。它实际上是一个很长的二进制向量和一系列随机映射函数。布隆过滤器可以用于检测一个元素是否在一个集合中。它的优点是空间效率和查询时间都远远超过一般算法，缺点是有一定的误识别和删除困难。
+
+### Bloom Filter 原理 ###
+
+布隆过滤器的原理是，当一个元素被加入集合时，通过K个散列函数将这个元素映射成一个位数组中的K个点，把他们的位置为1。检索时，我们只要看看这些点是不是都是 1就（大约）知道集合中有没有它了： 如果这些点有任何一个0，则被检元素一定不是，如果都是1，则被检元素很可能在。这就是布隆过滤器的基本思想。
