--- a/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
+++ b/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
@@ -53,3 +53,8 @@
 ### Bloom Filter 原理 ###
 
 布隆过滤器的原理是，当一个元素被加入集合时，通过K个散列函数将这个元素映射成一个位数组中的K个点，把他们的位置为1。检索时，我们只要看看这些点是不是都是 1就（大约）知道集合中有没有它了： 如果这些点有任何一个0，则被检元素一定不是，如果都是1，则被检元素很可能在。这就是布隆过滤器的基本思想。
+
+Bloom Filter 更单哈希函数 Bit-Map 不同之处在于 : Bloom Filter 使用了k 个哈希函数，每个字符串跟 k个 bit对应。从而降低了冲突的概率。
+
+简而言之，言而简之就是我们先把我们数据库都加载到我们的过滤器中，比如数据库的Id 现在有 1，2，3。那就用id:1 为例子，他经过三次hash之后，把原本值0 的地方改为1。
+
