--- a/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
+++ b/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
@@ -58,3 +58,9 @@ Bloom Filter 更单哈希函数 Bit-Map 不同之处在于 : Bloom Filter 使用
 
 简而言之，言而简之就是我们先把我们数据库都加载到我们的过滤器中，比如数据库的Id 现在有 1，2，3。那就用id:1 为例子，他经过三次hash之后，把原本值0 的地方改为1。
 
+下次数据进来查询的时候如果id 的值是1，那么我就把 1 拿去三次 hash 发现三次 hash 的值。跟上边的三个位置完全一样，那就能证明过滤器中有 1 的
+
+反之 如果不一样就说明不存在了。
+
+
+
