Bloom Filter 的缺点

--- a/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
+++ b/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
@@ -62,5 +62,17 @@ Bloom Filter 更单哈希函数 Bit-Map 不同之处在于 : Bloom Filter 使用
 
 反之 如果不一样就说明不存在了。
 
+**应用场景：**防止缓存击穿
+
+简单来说就是你数据库的 id 都是 1 开始然后自增的，那我知道你接口是通过 id 查询的，我就是拿负数去查询，这个时候会发现缓存里面没有数据，我又去数据库查询也没有，一个请求这样，100个 ， 1000 个， 10000个呢 ？ DB 基本就扛不住了。如果在缓存里面加上这个，是不是就不存在了，你判断没这个数据就不去查了，直接 return 一个数据为空不就好了嘛？
+
+
+### Bloom Filter 的缺点 ###
+
+bloom filter 之所以能做到在时间和空间上的效率比较高，是因为牺牲了判断的准确率，删除的便利性。
+
+- 存在误判，可能要查到的元素没有在容器中，但是hash 之后得到的 K个位置上值都是 1。如果 bloom filter 中存储的是黑名单，那么可以通过建立一个白名单来存储可能会误判的元素。
+- 删除困难，一个放入容器的元素 映射到 bit 数组的 K 个位置上是1，删除的时候不能简单的直接置为 0，可能会影响到其他元素的判断。可以蚕蛹 Counting Bloom Filter
+
 
 
