Bloom Filter 的实现

--- a/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
+++ b/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
@@ -72,7 +72,44 @@ Bloom Filter 更单哈希函数 Bit-Map 不同之处在于 : Bloom Filter 使用
 bloom filter 之所以能做到在时间和空间上的效率比较高，是因为牺牲了判断的准确率，删除的便利性。
 
 - 存在误判，可能要查到的元素没有在容器中，但是hash 之后得到的 K个位置上值都是 1。如果 bloom filter 中存储的是黑名单，那么可以通过建立一个白名单来存储可能会误判的元素。
-- 删除困难，一个放入容器的元素 映射到 bit 数组的 K 个位置上是1，删除的时候不能简单的直接置为 0，可能会影响到其他元素的判断。可以蚕蛹 Counting Bloom Filter
+- 删除困难，一个放入容器的元素 映射到 bit 数组的 K 个位置上是1，删除的时候不能简单的直接置为 0，可能会影响到其他元素的判断。可以采用 **Counting Bloom Filter** 
+
+### Bloom Filter 实现 ###
+
+布隆过滤器有许多实现和优化，Guava 中就提供了一种 Bloom Filter 的实现。
+
+在使用 Bloom Filter 时，绕不过的两点是预估数据量 n 以及 期望的误判率fpp
+
+在实现 Bloom Filter 时，绕不过的两点就是 hash 函数的选取以及 bit 数组的大小。
+
+对于 一个确定的场景，我们预估要存的数据量为 n，期望的误判率为 fpp ，然后需要计算我们需要的 Bit 数组的大小 m ，以及 hash 函数的个数  k，并选择 hash 函数。
+
+#### Bit 数组大小选择 ####
+
+
+**Bit大小的选择**
+
+根据预估数据量 n 以及误判率  fpp ，bit 数组大小的 m 的计算方式
+
+    m = - (n * lnfpp) / ((ln2)^2)
+
+**哈希函数选择**
+
+由预估数据量 n 以及 bit 数组长度 m ，可以得到一个 hash 函数的个数 k ：
+
+    K = ( m/n ) ln2
+
+哈希函数的选择对性能的影响应该很大的，一个好的 哈希函数要能近似等概率的将字符串映射到 各个 Bit 。选择 K 个不同的哈希函数比较麻烦，一个简单的方法是选择一个 哈希函数，然后送入 k 个不同的参数。
+
+哈希函数个数 k 、位数组大小 m 、加入的字符串 n 的关系 可以参考 Bloom Filters - the math ，Bloom_filter-wikipedia
+
+使用 BloomFilter ，需要引入 guava 包 ：
+
+测试分两步 ： 
+
+1. 往过滤器中放 100w 个数，然后去验证这 100w 个数 是否能通过过滤器
+2. 另外找 1w 个数， 去检测漏网之鱼的数量
+
 
 
 
