--- a/Redis基础/7.有序集合(sorted Set).md
+++ b/Redis基础/7.有序集合(sorted Set).md
@@ -33,7 +33,7 @@ Redis 有序集合和集合一样也是 string 类型元素的集合，且不允
 ## Redis 有序集合命令 ##
 
 - ZADD key score1 memeber1[score2 memeber2] ： 向有序集合添加一个或多个成员，或者更新已存在成员的分数。
-- ZCARD key ： 获取有序结婚的成员数。
+- ZCARD key ： 获取有序的成员数。
 - ZCOUNT key min max ： 计算在有序集合中指定区间分数的成员数。
 - ZINCRBY key increment member ： 有序集合中对指定成员的分数加上增量 increment
 - ZINTERSTORE destination numkeys key[key...] ： 计算给定的一个或多个有序集的交集并将结果存储在新的有序 key 中。
