--- a/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
+++ b/Redis进阶/缓存雪崩、缓存击穿、缓存穿透.md
@@ -18,7 +18,8 @@
 #### 解决方法 ####
 
 1. 在访问 key 之前，采用 **SETNX(set if not exists)** 来设置另一个短期 key 来锁住当前 key 的访问，访问结束再删除该短期 key 。
-2. 设置热点数据永远不过期。或者加上互斥锁。
+2. 设置热点数据永远不过期（设置两个不同时间过期的缓存，交替使用）。
+3. 加上互斥锁。
 
 ## 缓存穿透 ##
 
