--- a/Redis基础/3.字符串(String).md
+++ b/Redis基础/3.字符串(String).md
@@ -20,7 +20,7 @@
 - GETBIT key offset : 对 key 所储存的的字符串值，获取指定偏移量上的位（bit）。
 - MGET key1[key2..] : 获取所有（一个或多个）给定 key 值。
 - SETBIT key offset value : 对 key 所储存的字符串值，设置或清除指定偏移量的位（bit）。
-- SETTNX key value : 只有在 key 不存在时设置 key 的值。
+- SETNX key value : 只有在 key 不存在时设置 key 的值。
 - STRLEN key : 返回 key 储存的字符串值的长度。
 - MSET key value [key value...] : 同时设置一个或多个key-value 对，当且仅当所有给定的key都不存在。
 - MSETNX key milliseconds value : 这个命令和 SETEX 命令相似，但它以毫秒为单位设置 key的生存时间,而不是像 SETEX 命令那样，以秒为单位。
@@ -31,3 +31,26 @@
 - DECR key ： 将 key 中储存的数字值减一。
 - DECRBY key decrement : key 所储存的值减去给定的减量值（decrement）。
 - APPEND key value : 如果 key 已经存在并且是一个字符串，APPEND 命令指定的value 追加到该 key 原来的值（value）的末尾。
+
+
+
+
+### Redis Setnx ###
+
+命令指定的key不存在时，为key设置指定的值。
+
+	redis 127.0.0.1:6379> SETNX KEY_NAME VALUE
+
+**实例**
+
+	redis> EXISTS job				# job不存在
+	(integer) 0
+		
+	redis> SETNX job "programmer"   # job设置不成功
+	(integer) 1
+
+	redis> SETNX job "code-farmer"  # 尝试覆盖job,失败
+	(integer) 0
+	
+	redis> GET job
+	"programmer"
