--- a/Redis基础/13.GEO.md
+++ b/Redis基础/13.GEO.md
@@ -21,3 +21,44 @@ geoadd 语法格式如下：
 GEOADD key longitude latitude member[longitude latitude member ...]
 ```
 
+##### geopos 
+
+geopos 用于从给定的key里返回所有指定名称（member）的位置（经度&纬度），不存在的返回 all。
+
+geopost语法如下 ：
+
+```
+GEOPOS key member [member ...]
+```
+
+##### geodist 
+
+geodist  用于返回两个给定位置之间的距离。
+
+geodist 语法格式如下：
+
+```
+GEODIST key member1 member2[m|km|mi]
+```
+
+member1 member2 为两个地理位置。
+
+最后一个距离单位参数说明：
+
+- m：米，默认单位
+- km：千米
+- mi：英里
+- ft：英尺
+
+##### georadius、georadiusbymember
+
+georadius 以给定的经纬度为中心，返回键包含的位置元素中，与中心的距离不超过给定最大距离的所有位置元素。
+
+georadiusbymember 和 georadius 命令一样，都可以找出位于指定范围内的元素，但是 georadiusbymember 的中心点是由给定的位置元素决定的，而不是使用经纬度来决定中心点。
+
+
+
+```
+GEORADIUS key longitude latitude radius m|km|ft|mi [WITHCOORD] [WITHDIST] [WITHHASH] [COUNT count] [ASC|DESC] [STORE key] [STOREDIST key]
+```
+
