--- a/Redis基础/14.Stream.md
+++ b/Redis基础/14.Stream.md
@@ -1,2 +1,10 @@
-### Stream
+### Redis Stream
+
+Redis Stream 是Redis 5.0版本新增的数据结构。
+
+Redis Stream 主要用于消息队列（MQ, Message Queue）,Redis 本身是有一个 发布订阅（pub/sub）来实现消息队列的功能，但它有个缺点就是消息无法持久化，如果出现网络断开，Redis宕机，消息就会被抛弃。
+
+简单点来说发布订阅（pub/sub）可以分发消息，但是无法记录历史消息。
+
+而 Redis Stream 提供了消息的持久化和主备复制功能，可以让任何客户端访问任何时刻的数据，并且能记住每一个客户端访问的位置，还能保证消息不丢失。
 
